--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>2020-5-2</title>
+    <!-- <meta name="viewport" content="width=device-width,initial-scalle=1"> -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -26,7 +27,7 @@
             <h1 class="main-visual-text">朝起きて１杯の水を飲む<br>メリットと正しい飲み方</h1>
         </div>
 
-        <div class="into-section">
+        <div class="intro-section">
             <div class="intro">
                 <p>テキストテキストテキスト</p>
             </div>
@@ -80,17 +81,46 @@
                         </p>
                     </div>
                 </div>
+
+                <div class="content">
+                    <div class="pic">
+                        <img src="img/img-content4.jpg">
+                    </div>
+                    <div class="txt">
+                        <h1>４、あああああ</h1>
+                    </div>
+                </div>
+
+                <div class="content">
+                    <div class="pic">
+                        <img src="img/img-content5.jpg">
+                    </div>
+                    <div class="txt">
+                        <h1>５、いいいいい</h1>
+                    </div>
+                </div>
+
+                <div class="content">
+                    <div class="pic">
+                        <img src="img/img-content6.jpg">
+                    </div>
+                    <div class="txt">
+                        <h1>６、ううううう</h1>
+                    </div>
+                </div>
             </div>
 
             <div class="contact-info">
-                <p>TEL 00-0000-0000<br>[受付時間　平日9:00～17:00]</p>
-                <a class="btn">お問い合わせ</a>
+                <div class="container">
+                    <p>TEL 00-0000-0000<br>[受付時間　平日9:00～17:00]</p>
+                    <a class="btn" href="">お問い合わせ</a>
+                </div>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>テキストテキストテキストテキスト</p>
+        <p><small>©テキストテキストテキストテキスト</small></p>
     </footer>
 </body>
 </html>
